adding some styles

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,11 +1,20 @@
 body {
-  background-color: rgb(250, 250,250);
+  background-color: #d9afd9;
+  background-image: linear-gradient(0deg, #d9afd9 0%, #97d9e1 100%);
 }
 
 .container {
   display: flex;
   align-items: center;
   flex-direction: column;
+}
+
+.box {
+  font-size: 20px;
+  color: #f4b41a;
+  background-color: #143d59;
+  text-align: center;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 
 .image {
